# qFrey-Tuner

./: .gitignore  README.md  Run.bat  main.py  pyproject.toml  qFrey-Tuner.spec  test_persistence.py
.github/workflows/: release.yml
optimizer/: __init__.py  benchmark_manager.py  calculator.py  config_manager.py  hardware_detector.py  models.py  network_tester.py  session_manager.py
scripts/: bump_version.py
tests/: test_calculator.py  test_hardware.py  test_network.py  test_persistence.py
ui/: __init__.py  main_window.py  welcome_dialog.py
ui/tabs/: __init__.py  benchmark_tab.py  hardware_tab.py  network_tab.py  usage_tab.py
