[project]
name = "qbittorrent-optimizer"
version = "0.1.0"
description = "Калькулятор оптимальных настроек qBittorrent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyqt6>=6.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["optimizer", "ui"]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]

