[project]
name = "qbittorrent-optimizer"
version = "0.2.9"
description = "Калькулятор оптимальных настроек qBittorrent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyqt6>=6.6.0",
    "requests>=2.31.0",
    "pywin32>=306; sys_platform == 'win32'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["optimizer", "ui"]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

